k8s_v1/root-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: root-service
  template:
    metadata:
      labels:
        app: root-service
    spec:
      containers:
        - image: root-service:0.1
          imagePullPolicy: Never
          name: root-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: root-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: root-service
